tests/src/frontend/typechecking/invalid/conditional_trait_tparam_constraint.sk
trait X<T: Equality>
class Foo<T>() uses X<T>[T: Equality], X<T>
